@@ -2,6 +2,9 @@
 Data Crow version 4.7.0                                            Released on 2023-03-xx
 -----------------------------------------------------------------------------------------
 
+[New]
+- Archive.org software online search.
+
 [Changed]
 - Now allowing for references to be made to main modules without removing the referenced
   module from the module menu.
